--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -100,41 +100,38 @@
               {% else %}
                 {% assign parent_link = p.permalink | remove: 'index.html' %}
                 <li class="nav-item {% if page.url contains parent_link %}active{% endif %}">
-                  {%- if p.permalink contains '://' -%}
-                    {%- assign url = p.permalink -%}
-                  {%- elsif p.permalink contains '/blog/' -%}
-                    {%- assign url = '/blog/' -%}
-                  {%- else -%}
-                    {%- assign url = p.url -%}
-                  {%- endif %}
-                  <a class="nav-link" href="{{ url | relative_url }}">
-                    {{- p.title }}
-                    {% if page.url contains p.url %}
-                      <span class="sr-only">(current)</span>
-                    {% endif %}
-                  </a>
+                  {% comment %} Direct external links for specific pages {% endcomment %}
+                  {% if p.title == 'publications' %}
+                    <a class="nav-link" href="https://scholar.google.com/citations?user=ll0ZmB4AAAAJ" target="_blank">
+                      {{- p.title }}
+                    </a>
+                  {% elsif p.title == 'projects' %}
+                    <a class="nav-link" href="https://github.com/sudoRicheek" target="_blank">
+                      {{- p.title }}
+                    </a>
+                  {% elsif p.title == 'cv' %}
+                    <a class="nav-link" href="{{ '/assets/pdf/RicheekCV.pdf' | relative_url }}" target="_blank">
+                      {{- p.title }}
+                    </a>
+                  {% else %}
+                    {%- if p.permalink contains '://' -%}
+                      {%- assign url = p.permalink -%}
+                    {%- elsif p.permalink contains '/blog/' -%}
+                      {%- assign url = '/blog/' -%}
+                    {%- else -%}
+                      {%- assign url = p.url -%}
+                    {%- endif %}
+                    <a class="nav-link" href="{{ url | relative_url }}">
+                      {{- p.title }}
+                      {% if page.url contains p.url %}
+                        <span class="sr-only">(current)</span>
+                      {% endif %}
+                    </a>
+                  {% endif %}
                 </li>
               {% endif %}
             {% endif %}
           {% endfor %}
-          {% if site.search_enabled %}
-            <!-- Search -->
-            <li class="nav-item">
-              <button id="search-toggle" title="Search" onclick="openSearchModal()">
-                <span class="nav-link">ctrl k <i class="ti ti-search"></i></span>
-              </button>
-            </li>
-          {% endif %}
-          {% if site.enable_darkmode %}
-            <!-- Toogle theme mode -->
-            <li class="toggle-container">
-              <button id="light-toggle" title="Change theme">
-                <i class="ti ti-sun-moon" id="light-toggle-system"></i>
-                <i class="ti ti-moon-filled" id="light-toggle-dark"></i>
-                <i class="ti ti-sun-filled" id="light-toggle-light"></i>
-              </button>
-            </li>
-          {% endif %}
         </ul>
       </div>
     </div>
